quick fix for button border styles not showing in the editor

--- a/src/blocks/advancedbtn/editor.scss
+++ b/src/blocks/advancedbtn/editor.scss
@@ -262,13 +262,16 @@
 }
 .kt-button.kb-btn-global-outline.kt-btn-size-xlarge {
     border-width: 4px;
+    border-style: solid;
 }
 .kt-button.kb-btn-global-outline.kt-btn-size-large {
     border-width: 3px;
+    border-style: solid;
     padding: calc( 0.4em - 3px ) calc( 1em - 3px );
 }
 .kt-button.kb-btn-global-outline.kt-btn-size-small {
     border-width: 1px;
+    border-style: solid;
     padding: calc( 0.4em - 1px ) calc( 1em - 1px );
 }
 // .wp-block-kadence-advancedbtn .kb-btn-global-inherit.kb-btn-has-icon {
